# flock

./: .cursorignore  .env_template  .gitignore  .sesskey  README.md  batch_results.csv  bloggy.flock.yaml  bloggy_memory_graph.json  celebrity_age_calculator.json  chat_memory_graph.json  code.txt  dev.py  file_path_demo.flock.yaml  flock_test.yaml  memory.txt  memory_graph.json  mkdocs.yml  my_flock.flock.yaml  nested_example.yaml  people_agent.flock.yaml  project.flock.yaml  pyproject.toml  repo.txt  repository_data.txt  repository_data_circ.txt  requirements.txt  story_agent.flock.yaml  test.yaml
.cursor/specs/: 02_agent_factory.md  04_evaluator_system.md  05_router_system.md
.github/workflows/: deploy-documentation.yml  deploy-whiteduck-pypi.yml
.project/: SPECS.md  TASKS.md  USERSTORIES.md  analyze_repo_prompt.md  implementation.md  planning_prompt.md
.project/llm/: 1.md  code-04-04-2025.txt  code-07-04.txt  code-batch-07-04-2025.txt  code-docs.txt  code09042025.txt  flock-02-04-25-dynamic-ui.txt  flock-29_03_2025-yaml.txt  llms-ctx-full_monsterui.txt  old_ui_poc.txt  wd-di.txt
.project/specs/: 01_core_architecture.md  02_agent_factory.md  03_module_system.md  04_evaluator_system.md  05_router_system.md  06_tool_system.md  07_execution_system.md  08_context_system.md  09_cli_system.md  10_workflow_system.md  11_memory_system.md  12_platform_system.md  13_registry_system.md  14_serialization_system.md
.project/tasks/: 001-env-settings-editor.md  002-env-settings-ui-components.md  003-env-settings-file-operations.md  004-settings-security-features.md  005-env-profile-switching.md  US007-T001-TOML-Serializable-Base.md  US007-T001-YAML-Serializable-Base.md  US007-T002-FlockAgent-TOML-Serialization.md  US007-T002-FlockAgent-YAML-Serialization.md  US007-T003-Flock-TOML-Serialization.md  US007-T003-Flock-YAML-Serialization.md  US007-T004-Callable-Reference-System.md  US007-T005-TOML-Documentation-and-Examples.md  US007-T005-YAML-Documentation-and-Examples.md  US007-T006-TOML-Editor-CLI.md  US007-T006-YAML-Editor-CLI.md  US007-T007-YAML-Serialization-Tests.md
.project/userstories/: US001-Settings-Editor.md  US007-TOML-Serialization.md  US007-YAML-Serialization.md
docs/: changelog.md  create_doc_boilerplate.py  file_path_support.md  index.md  serialization.md
docs/about/: changelog.md  contributing.md
docs/advanced/: complex-workflows.md  custom-agents.md  performance.md
docs/api/: flock-core.md  flockagent.md  types.md  utilities.md
docs/architecture/: components.md  design-decisions.md  overview.md
docs/cli/: index.md  settings-editor.md
docs/components/: evaluators.md  modules.md  tools.md
docs/contributing/: code-style.md  development.md  documentation.md  testing.md
docs/core-concepts/: agents.md  declarative.md  error-handling.md  evaluators.md  memory.md  modules.md  routers.md  type-system.md  workflows.md
docs/deployment/: index.md  monitoring.md  production-setup.md  scalability.md  security.md  temporal.md
docs/development/: dev.md  topics.md
docs/examples/: chain-gang.md  hello-flock.md  type-system.md
docs/features/: agent-chaining.md  agent-definition.md  lifecycle-hooks.md  pydantic.md  type-safety.md
docs/getting-started/: concepts.md  configuration.md  index.md  installation.md  quickstart.md
docs/guides/: chaining-agents.md  temporal-configuration.md
docs/integrations/: dspy.md  litellm.md  rest-api.md  tavily.md  temporal.md
docs/interacting-with-flock/: cli-tool.md  index.md  interactive-cli.md  (+3 more)
examples/: README.md
output/: planning_schema_agent_output_20250415_010615.json  project_type_agent_output_20250415_010615.json  template_agent_output_20250415_010615.json
scripts/: code_collector.py
tests/: PLAN.md  __init__.py  conftest.py  pytest.ini
tests_backup/: TESTING.md  conftest.py
(+316 files in other folders)
